--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-<h1>Welcome, {{username}}!</h1>
-
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <body><h1>Welcome, {{username}}!</h1></body>
+</html>
